
Fri Jun  9 21:29:32 PDT 2000
(KainX)

Finally got around to restructuring E-Biff.  I think you'll like the new look.

-------------------------------------------------------------------------------

Tue Jul 25 19:46:51 GMT 2000
(gilbertt)

Added ftp support to E-Screenshooter on fusion94's request. See config
dialog for details. The ftp password is stored in plaintext I'm afraid ;-)

Right now, the ftp option won't work if you use shell stuff in the dir or
datestamp fields (as by default), you have to use actual names/dirs instead
if you want to ftp... This is just 'cos of the way I do it right now...

This is temporary. I have two ways of fixing it, the painful way (for me),
or the easy way (use wordexp). The thing is, I think wordexp doesn't exist
for some of you guys... So I may have to do it the painful way. I won't get
around to this for a little while...

Hope it's okay for now..

-------------------------------------------------------------------------------

Sat Jul 29 19:23:46 PDT 2000
(KainX)

Added a randomizing function to E-Slides.

-------------------------------------------------------------------------------

Tue Aug  1 19:19:35 PDT 2000
(KainX)

Made E-Toolbox's action string checking a little friendlier.

-------------------------------------------------------------------------------

Wed Aug  2 19:13:31 PDT 2000
(KainX)

I'm an old xload fan, and none of the CPU meters actually measure load
averages.  So I wrote E-LoadMeter.  It displays the 1/5/15-minute load figures
as well as a vertical bar for each.

-------------------------------------------------------------------------------

Sat Oct 13 13:01:05 PDT 2001
(KainX)

Fixed the spec file, and hopefully fixed E-Power's insane respawning
habits.

-------------------------------------------------------------------------------

Sun Oct 14 11:13:21 PDT 2001
(KainX)

Added the ability to specify a timezone for E-Time.

-------------------------------------------------------------------------------