@@ -2,8 +2,8 @@
 
 Summary: Enlightenment Epplets
 Name: epplets
-Version: 0.6
-Release: 3
+Version: 0.7
+Release: 0.1
 Copyright: BSD
 Group: User Interface/X
 URL: http://www.enlightenment.org
