@@ -35,6 +35,9 @@
 # include <kstat.h>
 # include <sys/sysinfo.h>
 #endif
+#ifdef linux
+# include <linux/version.h>
+#endif
 #include "epplet.h"
 #include "net.h"
 
@@ -133,7 +136,7 @@ net_get_bytes_inout(const char *device, double *in_bytes, double *out_bytes) {
     if (colon) {
       *colon = ' ';
     }
-# if LINUX_VERSION_CODE < 0x020100
+# if LINUX_VERSION_CODE < KERNEL_VERSION(2,1,0)
     sscanf(buff, "%s %s %*s %*s %*s %*s %s", dev, in_str, out_str);
 # else
     sscanf(buff, "%s %s %*s %*s %*s %*s %*s %*s %*s %s", dev, in_str, out_str);
